# OurGraphic

./: .gitignore  .gitmodules  CMakeLists.txt  NativeWindowHelper.h  NativeWindowHelperMacos.mm  NativeWindowHelperWindows.cpp  README.md  build_test.bat  build_windows.bat  install_deps.bat  main.cpp
Framework/: BufferBuilder.cpp  BufferBuilder.h  BufferObject.cpp  CMakeLists.txt  DriverContext.h  FixedPipeline.cpp  FixedPipeline.h  IPipeline.h  IRenderEngine.h  IRenderProcessor.h  IndexBuffer.cpp  ResourceAllocator.h  ShaderCache.cpp  SoftRenderProcessor.cpp  SoftRenderProcessor.h  TestRenderEngine.cpp  TestRenderEngine.h  VertexBuffer.cpp  VertexBuilder.cpp  VertexBuilder.h  VulkanRenderProcessor.cpp  VulkanRenderProcessor.h
Framework/Backend/: BackendUtils.cpp  BackendUtils.h  BaseRenderAction.cpp  BaseRenderAction.h  BaseRenderResource.cpp  BaseRenderResource.h  CMakeLists.txt  CommandBufferQueue.cpp  Commands.cpp  DataReshaper.h  Driver.cpp  ICommandBuffer.h  IMemoryAllocator.h  IMemoryHandle.h  IRenderInstance.h  IResourceBuffer.h  Program.cpp  SamplerGroup.cpp
Framework/Backend/Soft/: CMakeLists.txt  SimpleSoftRasterizer.cpp  SimpleSoftRasterizer.h  SimpleSoftTest.cpp  SimpleSoftTest.h  SoftContext.h  SoftDriver.cpp  SoftDriver.h  SoftPipeline.cpp  SoftPipeline.h  SoftPlatformSDL.cpp  SoftPlatformSDL.h  SoftSwapChain.cpp  SoftSwapChain.h
Framework/Backend/Soft/Base/: ModuleBase.h  RasterizerBase.h  ShaderBase.h  SoftDataDef.h  SoftPipelineBase.h  TestBase.h
Framework/Backend/Vulkan/: CMakeLists.txt  VulkanBaseBuffer.cpp  VulkanBaseBuffer.h  VulkanBaseBufferView.cpp  VulkanBaseBufferView.h  VulkanBlitter.cpp  VulkanBlitter.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanCommands.cpp  VulkanCommands.h  VulkanContext.h  VulkanDef.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDisposer.cpp  VulkanDisposer.h  VulkanDriver.cpp  VulkanDriver.h  VulkanFBOCache.cpp  VulkanFBOCache.h  VulkanHandles.cpp  VulkanHandles.h  VulkanInstance.cpp  VulkanInstance.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h  VulkanMemoryHandle.cpp  VulkanMemoryHandle.h  VulkanPipelineCache.cpp  VulkanPipelineCache.h  VulkanPlatformMacos.cpp  VulkanPlatformMacos.h  VulkanPlatformMacos.mm  VulkanPlatformWindows.cpp  VulkanPlatformWindows.h  (+13 more)
Framework/Backend/include/: BackendUtils.h  BufferDescriptor.h  Driver.h  DriverApi.h  DriverEnum.h  Handle.h  IRenderDevice.h  ISwapchain.h  ITexture.h  MemoryAllocator.h  MemoryHandle.h  PipelineState.h  PixelBufferDescriptor.h  Program.h  RenderTargetInfo.h  SamplerGroup.h  TextureTypedef.h
Framework/Backend/include_internal/: CommandBufferQueue.h  Commands.h  Constants.h  Dispatcher.h  DriverEnum.h  HandleAllocator.h  IBuffer.h  ICommand.h  ICommandBuffer.h  ICommandPool.h  IDescriptor.h  IPlatform.h  IResource.h  ITextureView.h  Program.h  SamplerGroup.h
Framework/Component/: Camera.cpp  Camera.h  ComponentBase.h  LightSource.cpp  LightSource.h  PerViewUniform.cpp  PerViewUniform.h  Renderable.cpp  Renderable.h  SkySource.cpp  SkySource.h  Transform.cpp  Transform.h
Framework/Manager/: CameraSystem.cpp  CameraSystem.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  LightSystem.cpp  LightSystem.h  MeshReader.cpp  MeshReader.h  PerViewUniform.cpp  PerViewUniform.h  RenderSystem.cpp  RenderSystem.h  SystemBase.h  SystemEnum.h  SystemManager.cpp  SystemManager.h
Framework/Renderer/: CMakeLists.txt  DeferredRenderer.cpp  DeferredRenderer.h  IRenderer.h  SceneRenderer.cpp  SceneRenderer.h
Framework/Renderer/RenderGraph/: CMakeLists.txt  RenderGraph.cpp  RenderGraph.h  RenderGraphResourceAllocator.cpp  RenderGraphResourceAllocator.h
Framework/Renderer/RenderPass/: DeferredRenderBasePass.cpp  DeferredRenderBasePass.h  IRenderPass.h
Framework/Resource/: BufferBuilder.h  BufferObject.cpp  CMakeLists.txt  GlobalShaders.cpp  IndexBuffer.cpp  Material.cpp  MaterialCache.cpp  MaterialCache.h  MaterialInstance.cpp  MeshReader.cpp  RenderTarget.cpp  ResourceAllocator.h  ShaderCache.cpp  ShaderCache.h  Skybox.cpp  Texture.cpp  TextureLoader.cpp  VertexBuffer.cpp
Framework/Resource/Material/: CMakeLists.txt  MaterialParser.cpp  MaterialParser.h  MaterialUtils.cpp  MaterialUtils.h  SamplerBindingMap.cpp  SamplerBindingMap.h  SamplerBlock.cpp  SamplerBlock.h  SamplerBlockGenerator.cpp  SamplerBlockGenerator.h  ShaderBuilder.cpp  ShaderBuilder.h  ShaderCache.cpp  ShaderCache.h  UniformBlock.cpp  UniformBlock.h  UniformBlockGenerator.cpp  UniformBlockGenerator.h  UniformBuffer.cpp  UniformBuffer.h  UniformStruct.h
Framework/Resource/base/: BuilderBase.h
Framework/Resource/include/: BufferObject.h  GlobalShaders.h  IndexBuffer.h  Material.h  MaterialCache.h  MaterialInstance.h  MeshReader.h  RenderTarget.h  SamplerStruct.h  Skybox.h  Texture.h  TextureLoader.h  TextureSampler.h  TypedUniformBuffer.h  UniformStruct.h  VertexBuffer.h
Framework/Resource/include_internal/: MaterialEnum.h  ModuleKeyUtils.h  UniformTypeTraits.h
Framework/base/: BuilderBase.h  ModuleBase.h
Framework/include/: BufferObject.h  GlobalEnum.h  IndexBuffer.h  RenderTarget.h  Texture.h  VertexBuffer.h
Framework/include_internal/: ResourceBase.h
Utils/: BitmaskEnum.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  HashUtils.h  MacroUtils.h  Mutex.h  OGLogging.h  StaticVector.h
Utils/Container/: AssociativeContainer.h  StaticVector.h
Utils/DataStructure/: Algorithm.cpp  Algorithm.h
Utils/Event/: APICaller.h
Utils/Image/: CMakeLists.txt  ColorTransform.h  ImageEncoder.cpp  ImageEncoder.h  LinearImage.cpp  LinearImage.h
Utils/Image/Cubemap/: Cubemap.cpp  Cubemap.h  CubemapIBL.cpp  CubemapIBL.h  CubemapUtils.cpp  CubemapUtils.h
Utils/JobSystem/: Job.cpp  Job.h  JobSystem.cpp  JobSystem.h  Thread.cpp  Thread.h  WorkStealingDequeue.h  WorkerThread.cpp  WorkerThread.h
Utils/Math/: Math.h  PackUtils.cpp  PackUtils.h  TransformUtils.cpp  TransformUtils.h
Utils/Memory/: SImpleAllocator.h
Utils/Mesh/: MeshImport.cpp  MeshImport.h
Utils/Path/: PathUtils.cpp  PathUtils.h
(+82 files in other folders)
